# PiKake

./: .packer.yml  README.md  README.rst  install.sh  setup.cfg
debian/: changelog  control  install  rules
doc/: Makefile  make.bat
doc/source/: conf.py  index.rst
live-build/: prepare-builder.sh
pikake/: __init__.py  app.py  auth.py  browser.py  caroussel.py  config.json  config.py  manager.py  pikake.py  task.py  utils.py  uzbl_tabbed.py  webserver.py
pikake/.mozilla/firefox/kiosk.default/: compatibility.ini  extensions.ini  extensions.json  key3.db  prefs.js  secmod.db
pikake/.mozilla/firefox/kiosk.default/extensions/: {16466865-007f-4ce4-aeb5-a0aa8b34c61a}.xpi
pikake/assets/css/: style.css
pikake/static/: tabform.js
pikake/templates/: admin.html  index.html  info.html  layout.html
pykake/: app.py  config.json
pykake/.mozilla/firefox/kiosk.default/: sessionstore.js
pykake/templates/: index.html
root/boot/: xinitrc
root/boot/.mozilla/firefox/: profiles.ini
root/boot/.mozilla/firefox/kiosk.default/: search.json  times.json
root/boot/.mozilla/firefox/kiosk.default/storage/persistent/moz-safe-about+home/idb/: 818200132aebmoouht.sqlite
root/etc/: rc.local
root/home/pi/: .xinitrc
root/home/pi/pikake/.mozilla/firefox/kiosk.default/: cert8.db  cookies.sqlite  healthreport.sqlite  localstore.rdf  mimeTypes.rdf  permissions.sqlite  prefs.js  sessionstore.bak  sessionstore.bak-20140608211457
src/: app.py  browser.py  config.json  config.py
