[metadata]
name = PiKake
version = 1.0
summary = Shinken is a monitoring framework compatible with Nagios configuration and plugins
author = Savoir-faire Linux
author_email = supervision@savoirfairelinux.com
license = GNU Affero General Public License
url = https://github.com/savoirfairelinux/PiKake
description-file =
    README.rst

[files]
packages = pikake
data_files =
    etc/pikake = etc/*

#[global]
#setup-hooks =
#    install_hooks.get_init_scripts

#[install_data]
#post-hook.fix_shinken_cfg = install_hooks.fix_shinken_cfg

[entry_points]
console_scripts =
    pikake = pikake:main

[pbr]
warnerrors = true

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1
